--- a/morice_eMorbius/Wpf-Morbius/app.config
+++ b/morice_eMorbius/Wpf-Morbius/app.config
@@ -1,3 +1,33 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup><system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IServiceUser" />
+                <binding name="BasicHttpBinding_IServicePatient" />
+                <binding name="BasicHttpBinding_IServiceObservation" />
+            </basicHttpBinding>
+            <wsDualHttpBinding>
+                <binding name="WSDualHttpBinding_IServiceLive" />
+            </wsDualHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:3055/ServiceUser.svc" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IServiceUser" contract="ServiceUser.IServiceUser"
+                name="BasicHttpBinding_IServiceUser" />
+            <endpoint address="http://localhost:3055/ServiceLive.svc" binding="wsDualHttpBinding"
+                bindingConfiguration="WSDualHttpBinding_IServiceLive" contract="ServiceLive.IServiceLive"
+                name="WSDualHttpBinding_IServiceLive">
+                <identity>
+                    <userPrincipalName value="Martial-Laptop\Martial" />
+                </identity>
+            </endpoint>
+            <endpoint address="http://localhost:3055/ServicePatient.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServicePatient"
+                contract="ServicePatient.IServicePatient" name="BasicHttpBinding_IServicePatient" />
+            <endpoint address="http://localhost:3055/ServiceObservation.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceObservation"
+                contract="ServiceObservation.IServiceObservation" name="BasicHttpBinding_IServiceObservation" />
+        </client>
+    </system.serviceModel>
+</configuration>
