--- a/morice_eMorbius/Wpf-Morbius/app.config
+++ b/morice_eMorbius/Wpf-Morbius/app.config
@@ -3,7 +3,9 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup><system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_IServiceUser" />
+                <binding name="BasicHttpBinding_IServiceUser" maxReceivedMessageSize = "50000000" maxBufferPoolSize="50000000">
+                  <readerQuotas maxDepth="50000000" maxStringContentLength="50000000" maxArrayLength="50000000" maxBytesPerRead="50000000" maxNameTableCharCount="50000000" />
+                </binding>
                 <binding name="BasicHttpBinding_IServicePatient" />
                 <binding name="BasicHttpBinding_IServiceObservation" />
             </basicHttpBinding>
