New users can be added now.

--- a/morice_eMorbius/Wpf-Morbius/Wpf-Morbius.csproj
+++ b/morice_eMorbius/Wpf-Morbius/Wpf-Morbius.csproj
@@ -90,6 +90,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ViewModel\AddUserViewModel.cs" />
     <Compile Include="ViewModel\PatientDetailsViewModel.cs" />
     <Compile Include="ViewModel\PatientViewModel.cs" />
     <Compile Include="ViewModel\UserViewModel.cs" />
