Added image field in add user form + all fields are now reseted when we click on Add button.

--- a/morice_eMorbius/Wpf-Morbius/Wpf-Morbius.csproj
+++ b/morice_eMorbius/Wpf-Morbius/Wpf-Morbius.csproj
@@ -64,6 +64,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Services\IOService.cs" />
     <Compile Include="Tools\BoolColorConverter.cs" />
     <Compile Include="Tools\BoolConnectedConverter.cs" />
     <Compile Include="Tools\Image.cs" />
