--- a/morice_eMorbius/Wpf-Morbius/app.config
+++ b/morice_eMorbius/Wpf-Morbius/app.config
@@ -12,7 +12,9 @@
         <binding name="BasicHttpBinding_IServicePatient" maxReceivedMessageSize = "50000000" maxBufferPoolSize="50000000">
           <readerQuotas maxDepth="50000000" maxStringContentLength="50000000" maxArrayLength="50000000" maxBytesPerRead="50000000" maxNameTableCharCount="50000000" />
         </binding>
-        <binding name="BasicHttpBinding_IServiceObservation" />
+        <binding name="BasicHttpBinding_IServiceObservation" maxReceivedMessageSize = "50000000" maxBufferPoolSize="50000000">
+          <readerQuotas maxDepth="50000000" maxStringContentLength="50000000" maxArrayLength="50000000" maxBytesPerRead="50000000" maxNameTableCharCount="50000000" />
+        </binding>
       </basicHttpBinding>
       <wsDualHttpBinding>
         <binding name="WSDualHttpBinding_IServiceLive" />
